tests/parser/bad/variable_use/4.lat
class A {
    A a;
    A b;
    A c;
    int d;
}

A constructorA() {
    A res = new A;
    res.a = res;
    res.b = res;
    res.c = res;
    res.d = 5;
    return res;
}

int main() {
    A a = constructorA();
    int b;
    b = a.a.a.e.d;
    return 0;
}